--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "jquery": "^3.2.1",
+    "mysql": "^2.13.0",
     "nodemon": "^1.11.0",
     "path": "^0.12.7"
   }
